Fixed vertical center-align for AnkiDroid

--- a/src/minimal/minimal-basic/style.css
+++ b/src/minimal/minimal-basic/style.css
@@ -43,7 +43,7 @@
 /* -------------------------------------------------- BACKGROUND */
 .card {
   background-color: #ececec;
-  padding: 0.5em;
+  padding: 0.5em 0;
   cursor: var(--cursor);
 }
 .card.night_mode {
